--- a/public/manifest.json
+++ b/public/manifest.json
@@ -32,5 +32,10 @@
     "32": "icon-32.png",
     "48": "icon-48.png",
     "128": "icon-128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{f29d84e2-1b4c-4e9d-bd4e-7d2f1c3e1a9f}"
+    }
   }
 }
