--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Web Wizard",
   "version": "1.0",
-  "description": "Analyze website designs - instantly reveal color palettes and typography choices with a single click. Perfect for designers and developers.",
+  "description": "Analyze website designs - instantly reveal color palettes and typography choices with a single click.",
   "action": {
     "default_popup": "index.html"
   },
