--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,6 +14,9 @@
   "host_permissions": [
     "<all_urls>"
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": [
